<resources>
    <string name="app_name">Hodowla raka</string>
    <string name="CounterLabel">Wypalone dzisiaj: %1$d \nW tym miesiacu: %2$d \nOgólnie: %3$d</string>
    <string name="SumLabel">Wydane pieniadze: \n%1$.2f</string>
    <string name="counterButton"></string>
    <string name="sumButton">+</string>
    <string name="Ok">Ok</string>
    <string name="NameOfApp">Hodowla Raka</string>
    <string name="cigNumberText">%1$d papierosów</string>
    <string name="smokeCoutnerCalendar">papierosów : %1$d</string>
    <string name="previous"><![CDATA[<<]]></string>
    <string name="next"><![CDATA[>>]]></string>
    <string name="title_activity_base">baseActivity</string>
    <string name="stats_per_day">Dziennie: \n %1$.2f </string>
    <string name="stats_per_month">Miesiecznie: \n %1$d</string>
    <string name="stats_total">Łącznie: \n %1$d</string>
    <string name="title_activity_stats">Statystyki</string>
    <string name="stats_last_cig">Ostatni papieros \nDni: %1$d \nGodzin: %2$d \nMinut: %3$d"</string>
</resources>
