<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/licznik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/CounterLabel"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/licznikButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="152dp"
        android:text="@string/counterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wydanePieniadze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:gravity="center"
        android:text="@string/SumLabel"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:imeOptions="actionDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/licznik" />

    <Button
        android:id="@+id/paczkaButton"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginEnd="68dp"
        android:text="@string/sumButton"
        app:layout_constraintBottom_toBottomOf="@+id/licznikButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/licznikButton"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="248dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/licznikButton"
        app:layout_constraintTop_toBottomOf="@+id/paczkaButton" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="97dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="8dp"
        android:text="@string/Ok"
        app:layout_constraintEnd_toEndOf="@+id/wydanePieniadze"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</android.support.constraint.ConstraintLayout>